# zerostep

./: .editorconfig  .gitattributes  .gitignore  .guix-channel  ABI-FFI-README.md  ACCOUNTABILITY.adoc  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.toml  Containerfile  DCO.md  ECOSYSTEM.scm  FUNDING.yml  GOVERNANCE.adoc  LICENSE  LICENSE-GPL.txt  LICENSE.txt  MAINTAINERS.md  Project.toml  QUICKSTART.md  README.adoc  REVERSIBILITY.md  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  TOPOLOGY.md  VAEDataset_Splits.thy  codemeta.json  config.ncl  contrastive_model.jl  flake.nix  guix.scm  julia_utils.jl  justfile  metadata_schema.cue
.clusterfuzzlite/: project.yaml
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ghcr-publish.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.reuse/: dep5
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  provenance.json  security.txt
LICENSES/: LicenseRef-Palimpsest.txt
docs/: CITATIONS.adoc
fuzz/: Cargo.toml
src/: main.rs  metadata.rs
test/: runtests.jl
vae-normalizer/: CHANGELOG.md  Project.toml  README.md  SUPPORT.md  julia_utils.jl  justfile
vae-normalizer/.githooks/: prepare-commit-msg
vae-normalizer/LICENSES/: GPL-3.0-or-later.txt  LicenseRef-Palimpsest.txt  MIT.txt
vae-normalizer/src/: main.rs
